--- a/templates/config/procfile.yml
+++ b/templates/config/procfile.yml
@@ -1,10 +1,16 @@
-# Define helper provesses here. All of the would be spawned during
-# `carcass run` command execution.
-#
-# You can look at example setup. We assume that you need CoffeeScript
-# and SCSS compilers for comfort development.
-#
-# Also you can define any other processes here.
+# Define helper processes here. All of them would be spawned during
+# `clio run` command execution.
 
-coffee: coffee -c -w -o public/javascripts app/assets/javascripts
-scss:   scss --watch app/assets/stylesheets:public/stylesheets --style compressed
+# Running application binary
+app:      ./application
+
+# Running clio-watcher, which will track changes in .go and .template
+# files and restart an application immediatelly.
+# To use this tool, please make `go get github.com/pallada/hot-swap`
+hotswap:  clio-hotswap
+
+# Example of embeding popular tools for UI development.
+coffee:   coffee -c -w -o public/javascripts app/assets/javascripts
+scss:     scss --watch app/assets/stylesheets:public/stylesheets --style compressed
+
+# Please feel free to define any other processes here.
