--- a/templates/application/app/views/root.template
+++ b/templates/application/app/views/root.template
@@ -34,7 +34,7 @@
             top: 50%;
             left: 50%;
             margin: -167px 0 0 -412px;
-            font-family: source-sans-pro;
+            font-family: source-sans-pro, Helvetica, sans-serif;
         }
 
         #logo {
