issue #48: Using absolute path in application's skeleton template

--- a/templates/application/app/routes/root.go.template
+++ b/templates/application/app/routes/root.go.template
@@ -2,7 +2,7 @@ package routes
 
 import (
     . "github.com/cliohq/clio/core"
-    "../../app/controllers"
+    "{{.Name}}/app/controllers"
 )
 
 func init () {
