--- a/templates/application/application.go.template
+++ b/templates/application/application.go.template
@@ -2,7 +2,7 @@ package main
 
 import (
   . "github.com/cliohq/clio/core"
-  "./app/routes"
+  "{{.Name}}/app/routes"
 )
 
 // Mandatory function. Entering point of your application.
