Test suite for controllers turned into .template

--- a/templates/application/spec/controllers/controllers_suite_test.go.template
+++ b/templates/application/spec/controllers/controllers_suite_test.go.template
@@ -8,7 +8,7 @@ import (
     . "github.com/onsi/gomega"
 
     // current app resources
-    "cartua/app/routes"
+    "{{.Name}}/app/routes"
 
     // stdlib packages
     "testing"
