--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ go:
 
 install:
   - go get
+  - github.com/onsi/ginkgo
+  - github.com/onsi/gomega
   - go install
 
 script:
-  - ./test
+  - ./runspec
