dependencies in .travis.ci fixed

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ go:
 
 install:
   - go get
-  - github.com/onsi/ginkgo
-  - github.com/onsi/gomega
+  - go get github.com/onsi/ginkgo
+  - go get github.com/onsi/gomega
   - go install
 
 script:
