--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "~0.4.2",
     "grunt-bower-task": "~0.3.4",
     "grunt-cli": "0.1.13",
+    "grunt-closure-compiler": "0.0.21",
     "grunt-contrib-cssmin": "0.7.0",
     "grunt-contrib-sass": "~0.6.0",
     "grunt-contrib-watch": "~0.5.3"
